deploy/chart/templates/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: alcinaengineering
  namespace: alcinaengineering
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: alcinaengineering
